docs/envoy/v1.8.0/_sources/api-v2/data/core/v2alpha/health_check_event.proto.rst.txt
.. _envoy_api_file_envoy/data/core/v2alpha/health_check_event.proto:

Health check logging events
===========================

:ref:`Health check logging <arch_overview_health_check_logging>`.

.. _envoy_api_msg_data.core.v2alpha.HealthCheckEvent:

data.core.v2alpha.HealthCheckEvent
----------------------------------

`[data.core.v2alpha.HealthCheckEvent proto] <https://github.com/envoyproxy/envoy/blob/master/api/envoy/data/core/v2alpha/health_check_event.proto#L19>`_


.. code-block:: json

  {
    "health_checker_type": "...",
    "host": "{...}",
    "cluster_name": "...",
    "eject_unhealthy_event": "{...}",
    "add_healthy_event": "{...}",
    "timestamp": "{...}"
  }

.. _envoy_api_field_data.core.v2alpha.HealthCheckEvent.health_checker_type:

health_checker_type
  (:ref:`data.core.v2alpha.HealthCheckerType <envoy_api_enum_data.core.v2alpha.HealthCheckerType>`) 
  
.. _envoy_api_field_data.core.v2alpha.HealthCheckEvent.host:

host
  (:ref:`core.Address <envoy_api_msg_core.Address>`) 
  
.. _envoy_api_field_data.core.v2alpha.HealthCheckEvent.cluster_name:

cluster_name
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) 
  
.. _envoy_api_field_data.core.v2alpha.HealthCheckEvent.eject_unhealthy_event:

eject_unhealthy_event
  (:ref:`data.core.v2alpha.HealthCheckEjectUnhealthy <envoy_api_msg_data.core.v2alpha.HealthCheckEjectUnhealthy>`) Host ejection.
  
  
  Precisely one of :ref:`eject_unhealthy_event <envoy_api_field_data.core.v2alpha.HealthCheckEvent.eject_unhealthy_event>`, :ref:`add_healthy_event <envoy_api_field_data.core.v2alpha.HealthCheckEvent.add_healthy_event>` must be set.
  
.. _envoy_api_field_data.core.v2alpha.HealthCheckEvent.add_healthy_event:

add_healthy_event
  (:ref:`data.core.v2alpha.HealthCheckAddHealthy <envoy_api_msg_data.core.v2alpha.HealthCheckAddHealthy>`) Host addition.
  
  
  Precisely one of :ref:`eject_unhealthy_event <envoy_api_field_data.core.v2alpha.HealthCheckEvent.eject_unhealthy_event>`, :ref:`add_healthy_event <envoy_api_field_data.core.v2alpha.HealthCheckEvent.add_healthy_event>` must be set.
  
.. _envoy_api_field_data.core.v2alpha.HealthCheckEvent.timestamp:

timestamp
  (`Timestamp <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#timestamp>`_) Timestamp for event.
  
  


.. _envoy_api_msg_data.core.v2alpha.HealthCheckEjectUnhealthy:

data.core.v2alpha.HealthCheckEjectUnhealthy
-------------------------------------------

`[data.core.v2alpha.HealthCheckEjectUnhealthy proto] <https://github.com/envoyproxy/envoy/blob/master/api/envoy/data/core/v2alpha/health_check_event.proto#L51>`_


.. code-block:: json

  {
    "failure_type": "..."
  }

.. _envoy_api_field_data.core.v2alpha.HealthCheckEjectUnhealthy.failure_type:

failure_type
  (:ref:`data.core.v2alpha.HealthCheckFailureType <envoy_api_enum_data.core.v2alpha.HealthCheckFailureType>`) The type of failure that caused this ejection.
  
  


.. _envoy_api_msg_data.core.v2alpha.HealthCheckAddHealthy:

data.core.v2alpha.HealthCheckAddHealthy
---------------------------------------

`[data.core.v2alpha.HealthCheckAddHealthy proto] <https://github.com/envoyproxy/envoy/blob/master/api/envoy/data/core/v2alpha/health_check_event.proto#L56>`_


.. code-block:: json

  {
    "first_check": "..."
  }

.. _envoy_api_field_data.core.v2alpha.HealthCheckAddHealthy.first_check:

first_check
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Whether this addition is the result of the first ever health check on a host, in which case
  the configured :ref:`healthy threshold <envoy_api_field_core.HealthCheck.healthy_threshold>`
  is bypassed and the host is immediately added.
  
  

.. _envoy_api_enum_data.core.v2alpha.HealthCheckFailureType:

Enum data.core.v2alpha.HealthCheckFailureType
---------------------------------------------

`[data.core.v2alpha.HealthCheckFailureType proto] <https://github.com/envoyproxy/envoy/blob/master/api/envoy/data/core/v2alpha/health_check_event.proto#L38>`_


.. _envoy_api_enum_value_data.core.v2alpha.HealthCheckFailureType.ACTIVE:

ACTIVE
  *(DEFAULT)* ⁣
  
.. _envoy_api_enum_value_data.core.v2alpha.HealthCheckFailureType.PASSIVE:

PASSIVE
  ⁣
  
.. _envoy_api_enum_value_data.core.v2alpha.HealthCheckFailureType.NETWORK:

NETWORK
  ⁣
  

.. _envoy_api_enum_data.core.v2alpha.HealthCheckerType:

Enum data.core.v2alpha.HealthCheckerType
----------------------------------------

`[data.core.v2alpha.HealthCheckerType proto] <https://github.com/envoyproxy/envoy/blob/master/api/envoy/data/core/v2alpha/health_check_event.proto#L44>`_


.. _envoy_api_enum_value_data.core.v2alpha.HealthCheckerType.HTTP:

HTTP
  *(DEFAULT)* ⁣
  
.. _envoy_api_enum_value_data.core.v2alpha.HealthCheckerType.TCP:

TCP
  ⁣
  
.. _envoy_api_enum_value_data.core.v2alpha.HealthCheckerType.GRPC:

GRPC
  ⁣
  
.. _envoy_api_enum_value_data.core.v2alpha.HealthCheckerType.REDIS:

REDIS
  ⁣
  
